k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fivexo
  namespace: fivexo

spec:

  replicas: 2

  selector:
    matchLabels:
      app: fivexo

  template:

    metadata:
      labels:
        app: fivexo

    spec:

      containers:

      - name: fivexo

        image: 5xo:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
