k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: 5xo-service
  namespace: 5xo

spec:
  type: NodePort

  selector:
    app: 5xo

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
