k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fivexo-ingress
  namespace: fivexo

spec:
  ingressClassName: nginx

  rules:

  - host: fivexo.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: fivexo-service
            port:
              number: 5000

  - host: grafana.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

  - host: prometheus.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
